--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,12 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&display=swap');
+
+body {
   margin: 0px;
   padding: 0px;
+  font-family: 'Quicksand', sans-serif;
 }
 
-.App{
+#root {
+  width: 100vw;
   display: grid;
 }
